@@ -4,16 +4,14 @@ CREDITS
 -------
 Authors:
 
-Rob Flynn	<IM: RobFlynn>	   rob@linuxpimps.com
-Jim Duchek      <IM: zilding>      jimduchek@ou.edu
-Mark Spencer    <IM: markster97>   markster@marko.net
+Rob Flynn    	  <IM: RobFlynn>		rob@linuxpimps.com
+Eric Warmenhoven  <IM: EWarmenhoven>		warmenhoven@yahoo.com
+Jim Duchek        <IM: zilding>			jimduchek@ou.edu
+Mark Spencer      <IM: markster97>		markster@marko.net
 
 Other Contributors:
 
 ** LOGO DESIGNED BY: Naru Sundar **
-
-Eric Warmenhoven
-	This guy's rad.  He patched up the messy Gnome Applet stuff.
 
 Peter Teichiman <peter@helixcode.com>
 Larry Ewing 
